Fix the overflow

--- a/css/style.css
+++ b/css/style.css
@@ -221,11 +221,12 @@ header nav .toggle {
 #our-pets .container .content .pet-box {
     background: #fff;
     color: var(--dark-color);
+    width: 315px;
+    margin: 0 auto;
 }
 
 #our-pets .container .content .pet-box .pet-image {
     width: 100%;
-    min-height: 100%;
 }
 
 #our-pets .container .content .pet-box .pet-image img {
@@ -391,6 +392,9 @@ footer .company p {
     /* ------ Our Pets ------ */
     #our-pets .container .content {
         grid-template-columns: 1fr 1fr;
+    }
+    #our-pets .container .content .pet-box {
+        width: auto;
     }
 
     /* ------ Footer ------ */
